[project]
name = "vlm-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.2.11",
    "fastapi>=0.121.2",
    "openai>=2.8.0",
    "pymongo>=4.15.4",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
